Add alloy-core, alloy-ide, anvil build tool, and server crash fixes
- alloy-core: server-side mod with commands (tps, mods, permissions),
  TPS monitor, permission system, economy API, and handshake protocol
- alloy-ide: Tauri-based mod development IDE with code editor,
  AI assistant, asset pipeline, animation editor, and build tools
- alloy-loader: ASM hook crash protection (try-catch Throwable at
  bytecode level), server shutdown state reset, slider text fix,
  Realms button replaced with AlloyMC link
- alloy-api: economy and permission provider interfaces
- anvil: unified build script for all Alloy components
- .gitignore: exclude target_out/, runtime server data

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>