@@ -89,6 +89,28 @@ public final class AlloyMappings {
                 versionDir.resolve("client_mappings.txt"));
         System.out.println("[Alloy] client_mappings.txt: "
                 + MojangApi.formatSize(details.clientMappings().size()));
+
+        // Download server JAR if available
+        // Modern MC server JARs (1.18+) are bundled — the actual server classes
+        // are inside META-INF/versions/<version>/server-<version>.jar
+        Path serverJar = null;
+        if (details.server() != null) {
+            Path bundledServerJar = api.download(details.server(), versionDir.resolve("server.jar"));
+            System.out.println("[Alloy] server.jar: "
+                    + MojangApi.formatSize(details.server().size()));
+
+            // Extract the inner server JAR from the bundled JAR
+            Path extractedServerJar = versionDir.resolve("server-extracted.jar");
+            if (!Files.exists(extractedServerJar)) {
+                System.out.println("[Alloy] Extracting inner server JAR from bundled server.jar...");
+                extractInnerServerJar(bundledServerJar, version.id(), extractedServerJar);
+            } else {
+                System.out.println("[Alloy] server-extracted.jar already exists (cached)");
+            }
+            serverJar = extractedServerJar;
+        } else {
+            System.out.println("[Alloy] No server JAR available for this version");
+        }
         System.out.println();
 
         // Step 4: Download libraries
@@ -169,6 +191,14 @@ public final class AlloyMappings {
                 clientJar, libraryJars, nativeJars, nativesDir, assetsDir,
                 loaderJarPath);
         System.out.println("[Alloy] Generated: " + launchScript.toAbsolutePath());
+
+        // Generate server launch script if server JAR was downloaded
+        if (serverJar != null) {
+            Path serverLaunchScript = generateServerLaunchScript(
+                    versionDir, version.id(),
+                    serverJar, libraryJars, loaderJarPath);
+            System.out.println("[Alloy] Generated: " + serverLaunchScript.toAbsolutePath());
+        }
         System.out.println();
 
         long elapsed = System.currentTimeMillis() - startTime;
@@ -237,7 +267,7 @@ public final class AlloyMappings {
 
             // Alloy API JAR — resolve relative to the loader JAR
             Path loaderPath = Path.of(loaderJarPath).toAbsolutePath().getParent();
-            Path apiDir = loaderPath.resolve("../../alloy-api/build/libs").normalize();
+            Path apiDir = loaderPath.resolve("../../../alloy-api/build/libs").normalize();
             if (Files.isDirectory(apiDir)) {
                 try (var stream = Files.newDirectoryStream(apiDir, "alloy-api-*.jar")) {
                     for (Path apiJar : stream) {
@@ -262,8 +292,20 @@ public final class AlloyMappings {
 
         // Determine the main class: use AlloyLoader if loader JAR provided, else MC directly
         String launchMainClass;
+        String agentArg = "";
+        String iconArg = "";
         if (loaderJarPath != null && !loaderJarPath.isBlank()) {
             launchMainClass = "net.alloymc.loader.AlloyLoader";
+            agentArg = "-javaagent:\"" + loaderJarPath + "\"";
+
+            // Resolve alloy_logo.png from alloy-client resources
+            Path loaderPath = Path.of(loaderJarPath).toAbsolutePath().getParent();
+            Path logoFile = loaderPath.resolve(
+                    "../../../alloy-client/src/main/resources/assets/alloy/textures/alloy_logo.png")
+                    .normalize();
+            if (Files.exists(logoFile)) {
+                iconArg = "-Dalloy.icon.path=\"" + logoFile.toAbsolutePath() + "\"";
+            }
         } else {
             launchMainClass = mainClass;
         }
@@ -286,6 +328,8 @@ public final class AlloyMappings {
 
                 exec "$JAVA_BIN" \\
                   $MACOS_ARGS \\
+                  %s \\
+                  %s \\
                   -Xmx2G \\
                   -Xms512M \\
                   --add-modules=jdk.incubator.vector \\
@@ -313,6 +357,8 @@ public final class AlloyMappings {
                   "$@"
                 """.formatted(
                 versionId,
+                agentArg,
+                iconArg,
                 nativesDir.toAbsolutePath(),
                 cp,
                 launchMainClass,
@@ -326,6 +372,149 @@ public final class AlloyMappings {
         Files.writeString(launchFile, script);
 
         // Make executable
+        try {
+            Files.setPosixFilePermissions(launchFile,
+                    PosixFilePermissions.fromString("rwxr-xr-x"));
+        } catch (UnsupportedOperationException ignored) {
+            // Windows doesn't support POSIX permissions
+        }
+
+        return launchFile;
+    }
+
+    /**
+     * Extracts the inner server JAR from the modern bundled server JAR format.
+     * The actual server classes live at META-INF/versions/{version}/server-{version}.jar
+     */
+    private static void extractInnerServerJar(Path bundledJar, String versionId, Path target)
+            throws IOException {
+        String innerPath = "META-INF/versions/" + versionId + "/server-" + versionId + ".jar";
+
+        try (JarFile jar = new JarFile(bundledJar.toFile())) {
+            JarEntry entry = jar.getJarEntry(innerPath);
+            if (entry == null) {
+                throw new IOException("Could not find inner server JAR at '" + innerPath
+                        + "' inside " + bundledJar.getFileName()
+                        + ". The server JAR format may have changed.");
+            }
+
+            try (InputStream is = jar.getInputStream(entry)) {
+                Files.copy(is, target);
+            }
+            System.out.println("[Alloy] Extracted: server-extracted.jar ("
+                    + MojangApi.formatSize(Files.size(target)) + ")");
+        }
+    }
+
+    /**
+     * Generates a bash launch script for the dedicated server.
+     * No -XstartOnFirstThread, no LWJGL paths, no assets/auth args.
+     */
+    private static Path generateServerLaunchScript(
+            Path versionDir, String versionId,
+            Path serverJar, List<Path> libraryJars,
+            String loaderJarPath) throws IOException {
+
+        Path runServerDir = versionDir.resolve("../../run-server").normalize();
+        Files.createDirectories(runServerDir);
+        Files.createDirectories(runServerDir.resolve("mods"));
+
+        StringBuilder cp = new StringBuilder();
+
+        // Alloy loader JAR (if provided)
+        if (loaderJarPath != null && !loaderJarPath.isBlank()) {
+            cp.append(loaderJarPath).append(":");
+
+            // Alloy API JAR
+            Path loaderPath = Path.of(loaderJarPath).toAbsolutePath().getParent();
+            Path apiDir = loaderPath.resolve("../../../alloy-api/build/libs").normalize();
+            if (Files.isDirectory(apiDir)) {
+                try (var stream = Files.newDirectoryStream(apiDir, "alloy-api-*.jar")) {
+                    for (Path apiJar : stream) {
+                        cp.append(apiJar.toAbsolutePath()).append(":");
+                    }
+                }
+            }
+
+            // Alloy Core JAR
+            Path coreDir = loaderPath.resolve("../../../alloy-core/build/libs").normalize();
+            if (Files.isDirectory(coreDir)) {
+                try (var stream = Files.newDirectoryStream(coreDir, "AlloyCore-*.jar")) {
+                    for (Path coreJar : stream) {
+                        cp.append(coreJar.toAbsolutePath()).append(":");
+                    }
+                }
+            }
+        }
+
+        // Server JAR
+        cp.append(serverJar.toAbsolutePath());
+
+        // Library JARs (non-native, server doesn't need natives)
+        for (Path lib : libraryJars) {
+            // Skip LWJGL libraries — server doesn't need them
+            String fileName = lib.getFileName().toString().toLowerCase();
+            if (fileName.contains("lwjgl") || fileName.contains("glfw")
+                    || fileName.contains("openal") || fileName.contains("stb")
+                    || fileName.contains("jemalloc") || fileName.contains("freetype")) {
+                continue;
+            }
+            cp.append(":").append(lib.toAbsolutePath());
+        }
+
+        // Determine the main class
+        String launchMainClass;
+        String agentArg = "";
+        if (loaderJarPath != null && !loaderJarPath.isBlank()) {
+            launchMainClass = "net.alloymc.loader.AlloyLoader";
+            agentArg = "-javaagent:\"" + loaderJarPath + "\"";
+        } else {
+            launchMainClass = "net.minecraft.server.Main";
+        }
+
+        String script = """
+                #!/bin/bash
+                # Auto-generated by Alloy setupWorkspace
+                # Minecraft %s Dedicated Server via Alloy Mod Loader
+
+                JAVA_BIN="${JAVA_HOME:-/usr}/bin/java"
+                if [ ! -f "$JAVA_BIN" ]; then
+                    JAVA_BIN="java"
+                fi
+
+                exec "$JAVA_BIN" \\
+                  %s \\
+                  -Dalloy.environment=server \\
+                  -Xmx2G \\
+                  -Xms512M \\
+                  --add-modules=jdk.incubator.vector \\
+                  --enable-native-access=ALL-UNNAMED \\
+                  --add-opens=java.base/java.lang=ALL-UNNAMED \\
+                  --add-opens=java.base/java.lang.reflect=ALL-UNNAMED \\
+                  --add-opens=java.base/java.io=ALL-UNNAMED \\
+                  --add-opens=java.base/java.util=ALL-UNNAMED \\
+                  --add-opens=java.base/sun.nio.ch=ALL-UNNAMED \\
+                  -Dminecraft.launcher.brand=alloy \\
+                  -Dminecraft.launcher.version=0.1.0 \\
+                  -cp "%s" \\
+                  %s \\
+                  --server \\
+                  --version %s \\
+                  --gameDir "%s" \\
+                  nogui \\
+                  "$@"
+                """.formatted(
+                versionId,
+                agentArg,
+                cp,
+                launchMainClass,
+                versionId,
+                runServerDir.toAbsolutePath()
+        );
+
+        Path launchFile = versionDir.resolve("launch-server.sh");
+        Files.writeString(launchFile, script);
+
         try {
             Files.setPosixFilePermissions(launchFile,
                     PosixFilePermissions.fromString("rwxr-xr-x"));
